fix: arruma erros.

--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                 </div>
                 <div
                     class="col-12 col-md-5 py-5 d-flex flex-column flex-md-row align-items-center pe-0 ps-lg-5 ps-3 mb-3 pt-0 pb-2 pb-md-5">
-                    <img src="img/qr-code.svg" alt="QR Code do Pix" style="width: 120px;">
+                    <img src="img/qr-code.png" alt="QR Code do Pix" style="width: 120px;">
                     <div class="apoia-text pt-3 ps-3">
                         <h2 class="h2-apoia mb-0">Pix - QR Code</h2>
                         <p class="p-apoia">Banco de tal</p>
