style: define padrão tamanhos das fonts no  desktop

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     </div>
                     <div class="col-8 mt-0 mt-md-5 mb-0 mb-md-5 quem-somos p-5 pt-4">
                         <h1 class="title-green display-3">Quem Somos</h1>
-                        <p class="p-quem text-black">
+                        <p class="p-quem text-black fs-5">
                             O Grupo de Idosos Viver Mais – GIVM, é uma organização da sociedade
                             civil, sem fins lucrativos, que atua na cidade de Arcoverde em Pernambuco desde 2007, em
                             favor das pessoas idosas, residentes nas áreas urbana e rural, que se encontram em situação
@@ -150,7 +150,7 @@
                             <div class="card-body">
                                 <img src="./img/icons/flecha-e-alvo.svg" class="img-fluid pt-3 pb-3" alt="Flecha"
                                     width="100">
-                                <h3 class="text-proposito">Missão</h3>
+                                <h3 class="text-proposito fs-2">Missão</h3>
                                 <a class="a-proposito" data-bs-toggle="modal" data-bs-target="#exampleModal1">
                                     Desenvolvimento social
                                 </a>
@@ -159,7 +159,7 @@
                         <div class="card border-0 visao text-center rounded-4 shadow">
                             <div class="card-body">
                                 <img src="./img/icons/olho.svg" class="img-fluid pt-3 pb-3" alt="Olho" width="100">
-                                <h3 class="text-proposito">Visão</h3>
+                                <h3 class="text-proposito fs-2">Visão</h3>
                                 <a class="a-proposito" data-bs-toggle="modal" data-bs-target="#exampleModal2">
                                     Impacto social
                                 </a>
@@ -169,7 +169,7 @@
                             <div class="card-body">
                                 <img src="./img/icons/coracao.svg" class="img-fluid pt-3 pb-3" alt="Coração"
                                     width="100">
-                                <h3 class="text-proposito">Valores</h3>
+                                <h3 class="text-proposito fs-2">Valores</h3>
                                 <a class="a-proposito" data-bs-toggle="modal" data-bs-target="#exampleModal3">
                                     Responsabilidade social
                                 </a>
@@ -235,11 +235,11 @@
                     </div>
                     <div class="col-6 col-projetos my-4 mb-md-0 px-5">
                         <h2 class="h-projetos display-3">Projetos</h2>
-                        <p class="p-projetos">
+                        <p class="p-projetos fs-5">
                             Nosso Grupo conta com diversos projetos acontecendo simultaneamente sempre
                             alinhados com a nossa missão, visão e valores.
                         </p>
-                        <p class="p-projetos">
+                        <p class="p-projetos fs-5">
                             Alguns de nossos projetos: listar aqui 1, listar aqui 2, listar aqui 3.
                         </p>
                     </div>
@@ -252,12 +252,12 @@
                 <div class="row align-items-center flex-column flex-sm-row">
                     <div class="col-5 p-md-5 m-0 p-0 mt-4 mb-4 text-atividades">
                         <h3 class="display-3 title-brown title-atividades">Atividades</h3>
-                        <p class="p-atividades">
+                        <p class="p-atividades fs-5">
                             Descubra sorrisos e participação ativa, conheça as vibrantes atividades
                             que realizamos com os idosos. Junte-se a nós na construção de momentos significativos e
                             cheios de alegria!
                         </p>
-                        <p class="p-atividades">Arrasta para o lado!</p>
+                        <p class="p-atividades fs-5">Arrasta para o lado!</p>
                     </div>
                     <!--carrossel grande e extra grande-->
                     <div class="col-7 p-0 d-none d-md-block d-lg-block d-xl-block carrossel">
@@ -331,12 +331,12 @@
             <div class="container-fluid">
                 <div class="row align-items-end align-items-lg-center">
                     <div class="col-12 col-md-5 pb-0 pb-md-5 px-5 py-5">
-                        <h2 class="display-5 title-equipe">Nossa Equipe</h2>
-                        <p class="p-equipe">
+                        <h2 class="display-3 title-equipe">Nossa Equipe</h2>
+                        <p class="p-equipe fs-5">
                             O Grupo de Idosos Viver mais conta com uma equipe multidisciplinar pronta
                             para atender e focar na melhor forma de celebrar a vida.
                         </p>
-                        <p class="p-equipe">
+                        <p class="p-equipe fs-5">
                             Nossos profissionais são: Psicólogos, Fisioterapeutas, etc etc tec (tem que perguntar)
                         </p>
                     </div>
@@ -349,9 +349,9 @@
         <!--apoia-->
         <section class="apoia pt-4" id="apoia">
             <div class="row container-fluid align-items-end pe-0">
-                <div class="col-12 text-apoia col-md-6 py-4 mb-md-3 mb-0 px-5">
-                    <h1 class="h1-apoia">Apoie o GIVM</h1>
-                    <p class="p-apoia">
+                <div class="col-12 text-apoia text-black col-md-6 py-4 mb-md-3 mb-0 px-5">
+                    <h1 class="h1-apoia display-5">Apoie o GIVM</h1>
+                    <p class="p-apoia text-black">
                         Ao contribuir financeiramente para nossa ONG, você se torna parte fundamental da
                         transformação positiva na vida de pessoas idosas. Sua doação proporciona recursos para as nossas
                         atividades. Sua generosidade também é a força que faz a diferença por trás do impacto positivo
@@ -362,11 +362,12 @@
                     class="col-12 col-md-5 py-5 d-flex flex-column flex-md-row align-items-center pe-0 ps-lg-5 ps-3 mb-3 pt-0 pb-2 pb-md-5">
                     <img src="img/qr-code.png" alt="QR Code do Pix" style="width: 120px;">
                     <div class="apoia-text pt-3 ps-3">
-                        <h2 class="h2-apoia mb-0">Pix - QR Code</h2>
-                        <p class="p-apoia">Banco de tal</p>
-                        <p class="p-apoia">CNPJ - 11.111/0001-11</p>
-                        <p class="p-apoia">Banco de tal</p>
-                        <p class="p-apoia">Nome da Instituição como aparece no Banco</p>
+                        <h2 class="h2-apoia display-5 mb-0 text-black">Pix - QR Code</h2>
+                        <p class="p-apoia text-black">
+                            Banco de tal <br>
+                            CNPJ - 11.111/0001-11 <br>
+                            Nome da Instituição como aparece no Banco
+                        </p>
                     </div>
                 </div>
                 <div class="col-1 d-inline text-end d-none d-md-inline m-0 p-0">
