--- a/index.html
+++ b/index.html
@@ -389,9 +389,9 @@
                 </div>
                 <div class="col-12 col-md rodape-links pt-4">
                     <h3 class="rodape-text">Links</h3>
-                    <p class="rodape-p">Quem Somos</p>
-                    <p class="rodape-p">Estatuto</p>
-                    <P class="rodape-p">Transparência</P>
+                    <a class="rodape-a text-decoration-none d-block pb-3" role="button" data-bs-toggle="modal" data-bs-target="#exampleModal4">Quem Somos</a>
+                    <a class="rodape-a text-decoration-none d-block pb-3" role="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Estatuto</a>
+                    <a class="rodape-a text-decoration-none d-block" role="button">Transparência</a>
                 </div>
                 <div class="col-12 col-md pt-4">
                     <h3 class="rodape-text">Contatos</h3>
