--- a/grupo-simios.html
+++ b/grupo-simios.html
@@ -51,11 +51,36 @@
         </div>
     </nav>
     <!-- Modais -->
+    <div class="modal fade" id="exampleModal4" tabindex="-1" aria-labelledby="exampleModalLabel4"
+                aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content rounded-4">
+                        <div class="modal-header">
+                            <h2 class="modal-title fs-5" id="exampleModalLabel4">Quem Somos</h2>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            Movida pela empatia à pessoa idosa, numa atitude de solidariedade, Assunção Lucas iniciou o
+                            trabalho do “Cantinho o Idoso” com um pequeno grupo de idosos moradores do Bairro São
+                            Cristóvão. <br>
+                            Nossa maior atenção volta-se a políticas promotoras de inclusão social e política
+                            socioassistencial, vistas como direito do cidadão e dever do Estado. Através da criação de
+                            novos valores, maneiras de pensar, sentir e de agir, tornando fáceis as transformações e
+                            modificações dessas relações sociais que vão a cada dia enriquecendo-se mais. <br>
+                            Com esse carisma de atender indistintamente à pessoa idosa, foi conquistando os seus
+                            familiares, vizinhos e amigos a apoiarem no desenvolvimento de ações promotoras do direito
+                            da pessoa idosa, através de um Serviço de Convivência. O GIVM tem como missão envolver
+                            socialmente as pessoas idosas, fazendo com que elas se sintam parte da sociedade e obtenham
+                            maior qualidade de vida aos seus dias.
+                        </div>
+                    </div>
+                </div>
+            </div>
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content rounded-4">
                 <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="exampleModalLabe">Estatuto</h1>
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Estatuto</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -193,14 +218,15 @@
                 <div class="col-12 col-md-5">
                     <img class="img-fluid rodape-marca" width="100px" src="./img/logo/logo-marca.png"
                         alt="Logo marca do Grupo Viver Mais">
-                    <p class="fs-4 pt-3 w-75 rodape-main-text">fortalecendo os vínculos, diminuindo riscos sociais e
-                        celebrando a vida.</p>
+                    <p class="fs-4 pt-3 w-75 rodape-main-text">
+                        fortalecendo os vínculos, diminuindo riscos sociais e celebrando a vida.
+                    </p>
                 </div>
                 <div class="col-12 col-md rodape-links pt-4">
                     <h3 class="rodape-text">Links</h3>
-                    <p class="rodape-p">Quem Somos</p>
-                    <p class="rodape-p">Estatuto</p>
-                    <P class="rodape-p">Transparência</P>
+                    <a class="rodape-a text-decoration-none d-block pb-3" role="button" data-bs-toggle="modal" data-bs-target="#exampleModal4">Quem Somos</a>
+                    <a class="rodape-a text-decoration-none d-block pb-3" role="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Estatuto</a>
+                    <a class="rodape-a text-decoration-none d-block" role="button">Transparência</a>
                 </div>
                 <div class="col-12 col-md pt-4">
                     <h3 class="rodape-text">Contatos</h3>
@@ -231,7 +257,7 @@
                     <a href="https://www.instagram.com/gruposimios/" target="_blank">
                         <img src="./img/social/instagram-cinza.png" alt="Icone do Instagram">
                     </a>
-                    <p>Todos os direitos reservados para Grupo Símios</p>
+                    <p>Todos os direitos reservados para <a href="./grupo-simios.html">Grupo Símios</a></p>
                 </div>
             </div>
         </div>
