--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="modal-dialog">
             <div class="modal-content rounded-4">
                 <div class="modal-header">
-                    <h2 class="modal-title fs-5" id="exampleModalLabe">Estatuto</h2>
+                    <h2 class="modal-title fs-5" id="exampleModalLabel">Estatuto</h2>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
