fix: ajusta pagina do grupo

--- a/grupo-simios.html
+++ b/grupo-simios.html
@@ -80,7 +80,7 @@
         <div class="modal-dialog">
             <div class="modal-content rounded-4">
                 <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="exampleModalLabel">Estatuto</h1>
+                    <h2 class="modal-title fs-5" id="exampleModalLabel">Estatuto</h2>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -134,30 +134,30 @@
                 <div class="row">
                     <div class="col mb-5 mt-5">
                         <h2 class="title-equipe display-3">Equipe</h2>
-                        <p class="p-equipe p-card-projetos">Conheça o time responsável pela criação e desenvolvimento do site do Grupo de Idosos Viver Mais.</p>
+                        <p class="p-equipe">Conheça o time responsável pela criação e desenvolvimento do site do Grupo de Idosos Viver Mais.</p>
                     </div>
                 </div>
-                <div class="row align-items-center ">
+                <div class="row align-items-center">
                     <div class="col d-flex gap-5 pb-5 justify-content-center">
                         <div class="card-equipe2 card border-0 rounded-4 align-items-center pt-4 text-center" style="width: 18rem;">
                             <img src="./img/grupo-simios/ana.png" class="card-img-top w-50" alt="...">
                             <div class="card-body align-items-center">
-                                <h5 class="card-title title-card-projetos">Ana Martins</h5>
-                                <p class="card-text p-card-projetos">Organizadora do Coletivo e buscador de clientes</p>
+                                <h5 class="card-title text-white fs-2">Ana Martins</h5>
+                                <p class="card-text text-white">Organizadora do Coletivo e buscador de clientes</p>
                             </div>
                         </div>
                         <div class="card-equipe2 card border-0 rounded-4 align-items-center pt-4 text-center" style="width: 18rem;">
                             <img src="./img/grupo-simios/erick.png" class="card-img-top w-50" alt="...">
                             <div class="card-body align-items-center">
-                                <h5 class="card-title title-card-projetos">Erick Rosa</h5>
-                                <p class="card-text p-card-projetos">Organizador do Coletivo e Analista de Sistemas</p>
+                                <h5 class="card-title text-white fs-2">Erick Rosa</h5>
+                                <p class="card-text text-white">Organizador do Coletivo e Analista de Sistemas</p>
                             </div>
                         </div>
                         <div class="card-equipe card border-0 rounded-4 align-items-center pt-4 text-center" style="width: 18rem;">
                             <img src="./img/grupo-simios/gabriel.png" class="card-img-top w-50" alt="...">
                             <div class="card-body align-items-center">
-                                <h5 class="card-title title-card-projetos">Gabriel Santiago</h5>
-                                <p class="card-text p-card-projetos">Tester</p>
+                                <h5 class="card-title text-white fs-2">Gabriel Santiago</h5>
+                                <p class="card-text text-white">Tester</p>
                             </div>
                         </div>
                     </div>
@@ -165,22 +165,22 @@
                         <div class="card-equipe card border-0 rounded-4 align-items-center pt-4 text-center" style="width: 18rem;">
                             <img src="./img/grupo-simios/joao.png" class="card-img-top w-50" alt="...">
                             <div class="card-body align-items-center">
-                                <h5 class="card-title title-card-projetos">João Arruda</h5>
-                                <p class="card-text p-card-projetos">Product Designer</p>
+                                <h5 class="card-title text-white fs-2">João Arruda</h5>
+                                <p class="card-text text-white">Product Designer</p>
                             </div>
                         </div>
                         <div class="card-equipe card border-0 rounded-4 align-items-center pt-4 text-center" style="width: 18rem;">
                             <img src="./img/grupo-simios/juan.png" class="card-img-top w-50" alt="...">
                             <div class="card-body align-items-center">
-                                <h5 class="card-title title-card-projetos">Juan Mendes</h5>
-                                <p class="card-text p-card-projetos">Desenvolvedor Web Full Stack</p>
+                                <h5 class="card-title text-white fs-2">Juan Mendes</h5>
+                                <p class="card-text text-white">Desenvolvedor Web Full Stack</p>
                             </div>
                         </div>
                         <div class="card-equipe card border-0 rounded-4 align-items-center pt-4 text-center" style="width: 18rem;">
                             <img src="./img/grupo-simios/julie.png" class="card-img-top w-50" alt="...">
                             <div class="card-body align-items-center">
-                                <h5 class="card-title title-card-projetos">Julie Godoi</h5>
-                                <p class="card-text p-card-projetos">Desenvolvedora web</p>
+                                <h5 class="card-title text-white fs-2">Julie Godoi</h5>
+                                <p class="card-text text-white">Desenvolvedora web</p>
                             </div>
                         </div>
                     </div>
@@ -188,22 +188,22 @@
                         <div class="card-equipe card border-0 rounded-4 align-items-center pt-4 text-center" style="width: 18rem;">
                             <img src="./img/grupo-simios/leonarda.png" class="card-img-top w-50" alt="...">
                             <div class="card-body align-items-center">
-                                <h5 class="card-title title-card-projetos">Leonarda Oliveira</h5>
-                                <p class="card-text p-card-projetos">Desenvolvedora Front-End</p>
+                                <h5 class="card-title text-white fs-2">Leonarda Oliveira</h5>
+                                <p class="card-text text-white">Desenvolvedora Front-End</p>
                             </div>
                         </div>
                         <div class="card-equipe card border-0 rounded-4 align-items-center pt-4 text-center" style="width: 18rem;">
                             <img src="./img/grupo-simios/luis.png" class="card-img-top w-50" alt="...">
                             <div class="card-body align-items-center">
-                                <h5 class="card-title title-card-projetos">Luís Duarte</h5>
-                                <p class="card-text p-card-projetos">Documenter</p>
+                                <h5 class="card-title text-white fs-2">Luís Duarte</h5>
+                                <p class="card-text text-white">Documenter</p>
                             </div>
                         </div>
                         <div class="card-equipe card border-0 rounded-4 align-items-center pt-4 text-center" style="width: 18rem;">
                             <img src="./img/grupo-simios/melissa.png" class="card-img-top w-50" alt="...">
                             <div class="card-body align-items-center">
-                                <h5 class="card-title title-card-projetos">Melissa Almeida</h5>
-                                <p class="card-text p-card-projetos">UX/UI Designer</p>
+                                <h5 class="card-title text-white fs-2">Melissa Almeida</h5>
+                                <p class="card-text text-white">UX/UI Designer</p>
                             </div>
                         </div>
                     </div>
