fix: atualização do design do footer

--- a/index.html
+++ b/index.html
@@ -376,53 +376,57 @@
         </section>
     </main>
     <!--rodapé-->
-    <footer class="rodape mt-5">
-        <div class="container">
-            <div class="row align-items-center py-5">
-                <div class="col-12 col-md-5">
-                    <img class="img-fluid rodape-marca" width="100px" src="./img/logo/logo-marca.png"
-                        alt="Logo marca do Grupo Viver Mais">
-                    <p class="fs-4 pt-3 w-75 rodape-main-text">
-                        fortalecendo os vínculos, diminuindo riscos sociais e celebrando a vida.
-                    </p>
-                </div>
-                <div class="col-12 col-md rodape-links pt-4">
-                    <h3 class="rodape-text">Links</h3>
-                    <p class="rodape-p">Quem Somos</p>
-                    <p class="rodape-p">Estatuto</p>
-                    <P class="rodape-p">Transparência</P>
-                </div>
-                <div class="col-12 col-md pt-4">
-                    <h3 class="rodape-text">Contatos</h3>
-                    <p class="rodape-p">E-mail: liziane_lucas@hotmail.com</p>
-                    <p class="rodape-p">
-                        <span class="me-2">
-                            <img src="./img/social/whatsapp.png" alt="Icone de Telefone">
-                        </span>
-                        <span>Telefone: +55 81 99991-5266</span>
-                    </p>
-                    <p class="rodape-p">
-                        <span class="me-2">
-                            <img src="./img/social/instagram.png" alt="Icone do Instagram">
-                        </span>
-                        <span>Instagram:</span>
-                        <a class="text-black" href="https://www.instagram.com/grupovivermais/?hl=pt-br"
-                            target="_blank">@grupovivermais
-                        </a>
-                    </p>
+    <footer class="mt-5">
+        <div class="rodape">
+            <div class="container">
+                <div class="row align-items-center py-5">
+                    <div class="col-12 col-md-5">
+                        <img class="img-fluid rodape-marca" width="100px" src="./img/logo/logo-marca.png"
+                            alt="Logo marca do Grupo Viver Mais">
+                        <p class="fs-4 pt-3 w-75 rodape-main-text">
+                            fortalecendo os vínculos, diminuindo riscos sociais e celebrando a vida.
+                        </p>
+                    </div>
+                    <div class="col-12 col-md rodape-links pt-4">
+                        <h3 class="rodape-text">Links</h3>
+                        <p class="rodape-p">Quem Somos</p>
+                        <p class="rodape-p">Estatuto</p>
+                        <P class="rodape-p">Transparência</P>
+                    </div>
+                    <div class="col-12 col-md pt-4">
+                        <h3 class="rodape-text">Contatos</h3>
+                        <p class="rodape-p">E-mail: liziane_lucas@hotmail.com</p>
+                        <p class="rodape-p">
+                            <span class="me-2">
+                                <img src="./img/social/whatsapp.png" alt="Icone de Telefone">
+                            </span>
+                            <span>Telefone: +55 81 99991-5266</span>
+                        </p>
+                        <p class="rodape-p">
+                            <span class="me-2">
+                                <img src="./img/social/instagram.png" alt="Icone do Instagram">
+                            </span>
+                            <span>Instagram:</span>
+                            <a class="text-black" href="https://www.instagram.com/grupovivermais/?hl=pt-br"
+                                target="_blank">@grupovivermais
+                            </a>
+                        </p>
+                    </div>
                 </div>
             </div>
-            <hr class="rodape-linha">
-            <div class="row">
-                <div class="d-flex gap-1 my-3">
-                    <a href="https://www.linkedin.com/company/grupo-s%C3%ADmios/" target="_blank">
-                        <img src="./img/social/linkedin-cinza.png" alt="Icone do Likedin">
-                    </a>
-                    <a href="https://www.instagram.com/gruposimios/" target="_blank">
-                        <img src="./img/social/instagram-cinza.png" alt="Icone do Instagram">
-                    </a>
-                    <p>Todos os direitos reservados para <a href="./grupo-simios.html">Grupo Símios</a></p>
-                </div>
+        </div>
+        <div class="row rodape__grupo-simios border-top w-100 m-0">
+            <div class="d-flex justify-content-center align-items-center gap-1 my-4">
+                <a href="#" target="_blank">
+                    <img src="./img/social/atados.png" alt="Icone do Likedin">
+                </a>
+                <a href="https://www.linkedin.com/company/grupo-s%C3%ADmios/" target="_blank">
+                    <img src="./img/social/linkedin-cinza.png" alt="Icone do Likedin">
+                </a>
+                <a href="https://www.instagram.com/gruposimios/" target="_blank">
+                    <img src="./img/social/instagram-cinza.png" alt="Icone do Instagram">
+                </a>
+                <a class="ms-3 rodape__links-simios" href="./grupo-simios.html">Todos os direitos reservados para Grupo Símios</a>
             </div>
         </div>
     </footer>
