fix: ajusta rodape conforme pr anterior

--- a/grupo-simios.html
+++ b/grupo-simios.html
@@ -225,9 +225,9 @@
                     </div>
                     <div class="col-12 col-md rodape-links pt-4">
                         <h3 class="rodape-text">Links</h3>
-                        <p class="rodape-p">Quem Somos</p>
-                        <p class="rodape-p">Estatuto</p>
-                        <P class="rodape-p">Transparência</P>
+                        <a class="rodape-a d-block pb-3 text-decoration-none" role="button" data-bs-toggle="modal" data-bs-target="#exampleModal4">Quem Somos</a>
+                        <a class="rodape-a d-block pb-3 text-decoration-none" role="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Estatuto</a>
+                        <a class="rodape-a d-block text-decoration-none">Transparência</a>
                     </div>
                     <div class="col-12 col-md pt-4">
                         <h3 class="rodape-text">Contatos</h3>
